--- a/App.css
+++ b/App.css
@@ -7,16 +7,15 @@
 }
 
 .main-view {
-
+  display:  flex;
 }
 
 .cube-views {
-  display: flex;
   text-align: center;
 }
 
 .controls {
-  
+  margin-left:  25%;
 }
 
 .pointer {
@@ -24,11 +23,12 @@
 }
 
 .cube-1 {
+  margin:  15%;
   display: flex;
 }
 
 .cube-2 {
-  margin: 5%;
+  margin: 25%;
 }
 
 .three-d-cube { width: 60px;
